--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"/>
+        <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script src="https://cdn.rawgit.com/InventPartners/bootstrap-responsive-tabs/master/jquery.responsivetabs.js"></script>
@@ -30,7 +32,7 @@
                 <div class="overlay-content" id="navbarToggler">
                     <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" href="#">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="#">About Us</a>
@@ -48,8 +50,8 @@
             <!--normal navbar for large and extra large devices-->
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav d-x-flex justify content-center mx-auto mt-2 mt-lg-0">
-                    <li class="nav-item active">
-                       <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <li class="nav-item">
+                       <a class="nav-link active" href="#">Home</a>
                      </li>
                      <li class="nav-item">
                         <a class="nav-link active" href="#">About Us</a>
@@ -62,16 +64,16 @@
                     </li>
                 </ul>
                 <!--contact us button-->
-                <button class="btn btn-primary text-white d-none d-lg-block" type="button">
+                <button class="btn btn-primary text-white d-none d-lg-block rounded-pill" type="button">
                     <a class="btn btn-primary btn-xl js-scroll-trigger" role="button" href="#services">Contact Us</a>
                 </button>
                 <!--nightmode icon-->
-                <button class="btn text-right text-white d-none d-lg-block" type="button" style="color: white;">
+                <button class="btn text-right text-white d-none d-lg-block" type="button" style="color: white; margin-left:15px; margin-right: 25px;">
                     <i onclick="myFunction(this)" class="fas fa-moon" style="text-align: center; color:black; font-size: large;"></i>
                 </button>
             </div>
             <!--telegram icon on mobile display-->
-            <button class="btn btn-primary d-md-none" type="button" style="background:#fcfcfc;">
+            <button class="btn d-md-none" type="button" style="background:transparent;">
                 <i class="fab fa-telegram-plane" style="color: rgb(7,7,7);"></i>
             </button>
         </nav>
@@ -80,7 +82,7 @@
             <div class="container my-auto">
                 <div class="row">
                     <div class="col-lg-10 mx-auto">
-                        <h1 class="text-uppercase"><strong>Website Development Services</strong></h1>
+                        <h1 class="text-uppercase animate__animated animate__pulse ">Website Development Services</h1>
                         <hr />
                     </div>
                 </div>
@@ -90,61 +92,134 @@
             </div>
         </header>
 
-        <section class="technologies-section">
-            <div class="container hero tabs">
-                <h2 class="mrg-b">Technologies we work with</h2>
-                <ul class="btn-box nav nav-tabs" role="tablist" aria-label="Sample Tabs">
-                    <li role="presentation"><button role="tab" aria-selected="true" role="tab" aria-controls="panel-1" id="tab-1" tabindex="0" data-toggle="tab">Front End</button></li>
-                    <li role="presentation"><button role="tab" aria-selected="false" role="tab" aria-controls="panel-2" id="tab-2" tabindex="0" data-toggle="tab">Back End</button></li>
-                    <li role="presentation"><button role="tab" aria-selected="false" role="tab" aria-controls="panel-3" id="tab-3" tabindex="0" data-toggle="tab">Mobile</button></li>
-                    <li role="presentation"><button role="tab" aria-selected="false" role="tab" aria-controls="panel-4" id="tab-4" tabindex="0" data-toggle="tab">CMS</button></li>
-                    <li role="presentation"><button role="tab" aria-selected="false" role="tab" aria-controls="panel-5" id="tab-5" tabindex="0" data-toggle="tab">Database</button></li>
-                </ul>
-                <div id="panel-1" role="tabpanel" tabindex="0" aria-labelledby="tab-1">
-                    <ul class=" tablist-content">
-                        <li><i class="fa fa-moon"></i></li>
-                        <li><i class="fa fa-sun"></i></li>
-                        <li><i class="fa fa-moon"></i></li>
-                        <li><i class="fa fa-sun"></i></li>
-                        <li><i class="fa fa-moon"></i></li>
-                        <li><i class="fa fa-sun"></i></li>
-                        <li><i class="fa fa-moon"></i></li>
-                        <li><i class="fa fa-sun"></i></li>
-                    </ul>
+        <!--homepage animation start-->
+        <div class="container">
+            <div class="row">
+                <div class="mt-3 col-lg-12"><h1 class="cd-headline" style="text-align: center;">We Develop</h1></div>
+                <div class="col-lg-12 mx-auto" style="text-align: center;">
+                    <span
+                        class="txt-rotate cd-headline"
+                        data-period="2000"
+                        data-rotate='[ "Amazing Websites !", "Beautiful Applications !", "Chatbots !",  "Digital Strategies" ]'></span>
                 </div>
-                <div id="panel-2" role="tabpanel" tabindex="0" aria-labelledby="tab-2" hidden>
-                    <ul>
-                        <li><i class="fa fa-facebook"></i></li>
-                        <li><i class="fa fa-twitter"></i></li>
-                        <li><i class="fa fa-facebook"></i></li>
-                        <li><i class="fa fa-twitter"></i></li>
-                        <li><i class="fa fa-facebook"></i></li>
-                        <li><i class="fa fa-twitter"></i></li>
-                        <li><i class="fa fa-facebook"></i></li>
-                        <li><i class="fa fa-twitter"></i></li>
-                    </ul>
-                </div>
-                <div id="panel-3" role="tabpanel" tabindex="0" aria-labelledby="tab-3" hidden>
-                    <p>Demo content 3</p>
-                </div>
-                <div id="panel-4" role="tabpanel" tabindex="0" aria-labelledby="tab-4" hidden>
-                    <p>Demo content 4</p>
-                </div>
-                <div id="panel-5" role="tabpanel" tabindex="0" aria-labelledby="tab-5" hidden>
-                    <p>Demo content 5</p>
+                <div class="col-lg-8 mx-auto" style="text-align: center;">
+                    <p class="mt-5">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Nobis natus obcaecati repellendus earum distinctio. Obcaecati
+                    reiciendis impedit praesentium ratione cum voluptatem architecto, 
+                    doloribus rem et soluta maiores assumenda delectus aliquam!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Nobis natus obcaecati repellendus earum distinctio. Obcaecati
+                        reiciendis impedit praesentium ratione cum voluptatem architecto, 
+                        doloribus rem et soluta maiores assumenda delectus aliquam!</p></div>
+            </div>
+        </div>
+        <!--homepage content start-->
+        <section class="homepage-next">
+            <div class="mt-5 container">
+                <h1 class="cd-hire" style="text-align: center;">Hire the best Web and Mobile app developers</h1>
+                <div class="col-lg-8 mx-auto" style="padding-bottom: 20px;">
+                    <p class="mt-5">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Nobis natus obcaecati repellendus earum distinctio. Obcaecati
+                    reiciendis impedit praesentium ratione cum voluptatem architecto, 
+                    doloribus rem et soluta maiores assumenda delectus aliquam!</p>
+                    <p class="mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Nobis natus obcaecati repellendus earum distinctio. Obcaecati
+                        reiciendis impedit praesentium ratione cum voluptatem architecto, 
+                        doloribus rem et soluta maiores assumenda delectus aliquam!</p>
                 </div>
             </div>
         </section>
+        <!--homepage content ends-->
+
+        <!--accomplishments map start-->
+        <section class="accomplishments">
+            <div class="container" style="padding-bottom: 20px;">
+                <div class="row">
+                    <div class="col-lg-12"><h1 class="cd-hire" style="text-align: center;">Accomplishments marked globally</h1><p class="mt-3" style="text-align: center;">states we have worked in</p></div>
+                    <div class="col-lg-10 mx-auto" style="text-align: center;"><img src="assets/img/workindia.gif" style="width: 90%;"></div>
+                </div>
+            </div>
+        </section>
+        <!--accomplishments map ends-->
+        
+        <!--our services start-->
+        <section class="our-services">
+            <div class="container">
+                <div class="row mx-auto" style="text-align: center; padding-bottom: 25px;"><h1> Our core services </h1></div>
+                <div class="row">
+                    
+                    <div class="col px-4 mx-auto">
+                        <div class="box" style="background-image: linear-gradient(rgb(186, 228, 244) 0%, rgb(186, 228, 244) 100%)">
+                            <h3 class="title">Web Development</h3>
+                            <img src="assets/img/hire-dedicated-developer.svg">
+                            <p class="services-content">Create your own team of developers for your software development project on short term,
+                                long term or permanent basis with guaranteed project delivery at affordable prices.</p>
+                        </div>
+                    </div>
+                    <div class="col px-4">
+                        <div class="box" style="background-image: linear-gradient(rgb(230, 221, 244) 0%, rgb(230, 221, 244) 100%);">
+                            <h3 class="title">Chatbot Development</h3>
+                            <img src="assets/img/chatbot-1.svg" style="width:299px; height:182px;">
+                            <p class="services-content">Create your own team of developers for your software development project on short term,
+                                long term or permanent basis with guaranteed project delivery at affordable prices.</p>
+                        </div>
+                    </div>
+                    <div class="col px-4">
+                        <div class="box" style="background-image: linear-gradient(rgb(209, 211, 246) 0%, rgb(209, 211, 246) 100%);">
+                            <h3 class="title">App Development</h3>
+                            <img src="assets/img/services-mobile-apps.svg" style="width:299px; height: 182px;">
+                            <p class="services-content">Create your own team of developers for your software development project on short term,
+                                long term or permanent basis with guaranteed project delivery at affordable prices.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row pt-3">
+                    <div class="col px-4">
+                        <div class="box" style="background-image: linear-gradient(rgb(244, 220, 204) 0%, rgb(244, 220, 204) 100%);">
+                            <h3 class="title">Search Engine Optimization</h3>
+                            <img src="assets/img/seo-des.svg" style="width: 375px; height: 182px;">
+                            <p>Create your own team of developers for your software development project on short term,
+                                long term or permanent basis with guaranteed project delivery at affordable prices.</p>
+                        </div>
+                    </div>
+                    <div class="col px-4">
+                        <div class="box" style="background-image: linear-gradient(rgb(246, 214, 214) 0%, rgb(246, 214, 214) 100%);">
+                            <h3 class="title">Logo Designing</h3>
+                            <img src="assets/img/brand.svg" style="width: 370px; height: 182px;">
+                            <p>Create your own team of developers for your software development project on short term,
+                                long term or permanent basis with guaranteed project delivery at affordable prices.</p>
+                        </div>
+                    </div>
+                    <div class="col px-4">
+                        <div class="box" style="background-image: linear-gradient(rgb(186, 228, 244) 0%, rgb(186, 228, 244) 100%);">
+                            <h3 class="title">Digital Marketing</h3>
+                            <img src="assets/img/digmark.svg" style="width: 370px; height: 182px;">
+                            <p>Create your own team of developers for your software development project on short term,
+                                long term or permanent basis with guaranteed project delivery at affordable prices.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
         <script>
+            $(document).ready(function(){
+            $(window).scroll(function(){
+                var scroll = $(window).scrollTop();
+                if (scroll > 300) {
+                    $("#mainNav").css("background" , "grey");
+                    $(".navbar-brand").css("color", "white");
+                    $(".nav-link").css("color", "white");
+                }
 
-            $('.banner-area').slick({
-                autoplay: true,
-                speed: 800,
-                arrows: false,
-                dots: true,
-                fade: true
-            });
+                else{
+                    $("#mainNav").css("background" , "transparent");
+                    $(".navbar-brand").css("color", "black");  	
+                    $(".nav-link").css("color", "black");
+                }
+            })
+            })
             $(function() {
                 $('.nav-tabs').responsiveTabs();
             });
