--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
         <link rel="stylesheet" type="text/css" href="assets/css/util.css">
 	    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script src="https://cdn.rawgit.com/InventPartners/bootstrap-responsive-tabs/master/jquery.responsivetabs.js"></script>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script src="assets/js/script.js"></script>
+        
     </head>
     <body>
         <nav id="mainNav" class="navbar navbar-expand-lg navbar-light fixed-top">
@@ -50,7 +53,7 @@
             </div>
 
             <!--normal navbar for large and extra large devices-->
-            <div class="collapse navbar-collapse">
+            <div class="collapse navbar-collapse" data-aos="fade-down">
                 <ul class="navbar-nav d-x-flex justify content-center mx-auto mt-2 mt-lg-0">
                     <li class="nav-item">
                        <a class="nav-link active" href="#">Home</a>
@@ -81,7 +84,7 @@
         </nav>
         
         <header class="masthead text-center text-white d-flex">
-            <div class="container my-auto">
+            <div class="container my-auto" data-aos="fade-down">
                 <div class="row">
                     <div class="col-lg-10 mx-auto">
                         <h1 class="text-uppercase animate__animated animate__pulse ">Website Development Services</h1>
@@ -95,7 +98,7 @@
         </header>
 
         <!--homepage animation start-->
-        <div class="container">
+        <div class="container" data-aos="fade-down">
             <div class="row">
                 <div class="mt-3 col-lg-12"><h1 class="cd-headline" style="text-align: center;">We Develop</h1></div>
                 <div class="col-lg-12 mx-auto" style="text-align: center;">
@@ -117,7 +120,7 @@
         </div>
         <!--homepage content start-->
         <section class="homepage-next">
-            <div class="mt-5 container">
+            <div class="mt-5 container" data-aos="fade-down">
                 <h1 class="cd-hire" style="text-align: center;">Hire the best Web and Mobile app developers</h1>
                 <div class="col-lg-8 mx-auto" style="padding-bottom: 20px;">
                     <p class="mt-5">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -135,7 +138,7 @@
 
         <!--accomplishments map start-->
         <section class="accomplishments">
-            <div class="container" style="padding-bottom: 20px;">
+            <div class="container" style="padding-bottom: 20px;" data-aos="fade-down">
                 <div class="row">
                     <div class="col-lg-12"><h1 class="cd-hire" style="text-align: center;">Accomplishments marked globally</h1><p class="mt-3" style="text-align: center;">states we have worked in</p></div>
                     <div class="col-lg-10 mx-auto" style="text-align: center;"><img src="assets/img/workindia.gif" style="width: 90%;"></div>
@@ -148,7 +151,7 @@
         <section class="our-services">
             <div class="container">
                 <div class="row mx-auto" style="text-align: center; padding-bottom: 25px;"><h1> Our core services </h1></div>
-                <div class="row">
+                <div class="row" data-aos="fade-down">
                     <div class="col-lg-4 px-4 mx-auto">
                         <div class="box" style="background-image: linear-gradient(rgb(186, 228, 244) 0%, rgb(186, 228, 244) 100%)">
                             <h3 class="title">Web Development</h3>
@@ -174,7 +177,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row" data-aos="fade-down">
                     <div class="col-lg-4 px-4 mx-auto">
                         <div class="box" style="background-image: linear-gradient(rgb(244, 220, 204) 0%, rgb(244, 220, 204) 100%);">
                             <h3 class="title">Search Engine Optimization</h3>
@@ -268,6 +271,7 @@
             $(function() {
                 $('.nav-tabs').responsiveTabs();
             });
+            AOS.init();
         </script>
     </body>
 </html>
