--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"/>
         <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script src="https://cdn.rawgit.com/InventPartners/bootstrap-responsive-tabs/master/jquery.responsivetabs.js"></script>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script src="assets/js/script.js"></script>
     </head>
     <body>
@@ -79,14 +81,14 @@
         </nav>
         
         <header class="masthead text-center text-white d-flex">
-            <div class="container my-auto">
-                <div class="row">
+            <div class="container my-auto" >
+                <div class="row" data-aos="fade-down">
                     <div class="col-lg-10 mx-auto">
                         <h1 class="text-uppercase animate__animated animate__pulse ">Website Development Services</h1>
                         <hr />
                     </div>
                 </div>
-                <div class="col-lg-8 mx-auto">
+                <div class="col-lg-8 mx-auto" data-aos="fade-down">
                     <p class="text-faded mb-5">We can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p><a class="btn btn-primary btn-xl js-scroll-trigger" role="button" href="#services">Find Out More</a>
                 </div>
             </div>
@@ -94,15 +96,15 @@
 
         <!--homepage animation start-->
         <div class="container">
-            <div class="row">
-                <div class="mt-3 col-lg-12"><h1 class="cd-headline" style="text-align: center;">We Develop</h1></div>
-                <div class="col-lg-12 mx-auto" style="text-align: center;">
+            <div class="row" >
+                <div class="mt-3 col-lg-12" data-aos="fade-down"><h1 class="cd-headline" style="text-align: center;">We Develop</h1></div>
+                <div class="col-lg-12 mx-auto " data-aos="fade-down" style="text-align: center;">
                     <span
                         class="txt-rotate cd-headline"
                         data-period="2000"
                         data-rotate='[ "Amazing Websites !", "Beautiful Applications !", "Chatbots !",  "Digital Strategies" ]'></span>
                 </div>
-                <div class="col-lg-8 mx-auto" style="text-align: center;">
+                <div class="col-lg-8 mx-auto" style="text-align: center;" data-aos="fade-down">
                     <p class="mt-5">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Nobis natus obcaecati repellendus earum distinctio. Obcaecati
                     reiciendis impedit praesentium ratione cum voluptatem architecto, 
@@ -115,9 +117,9 @@
         </div>
         <!--homepage content start-->
         <section class="homepage-next">
-            <div class="mt-5 container">
-                <h1 class="cd-hire" style="text-align: center;">Hire the best Web and Mobile app developers</h1>
-                <div class="col-lg-8 mx-auto" style="padding-bottom: 20px;">
+            <div class="mt-5 container" >
+                <h1 class="cd-hire" style="text-align: center;" data-aos="fade-down">Hire the best Web and Mobile app developers</h1>
+                <div class="col-lg-8 mx-auto" style="padding-bottom: 20px;" data-aos="fade-down">
                     <p class="mt-5">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Nobis natus obcaecati repellendus earum distinctio. Obcaecati
                     reiciendis impedit praesentium ratione cum voluptatem architecto, 
@@ -133,10 +135,10 @@
 
         <!--accomplishments map start-->
         <section class="accomplishments">
-            <div class="container" style="padding-bottom: 20px;">
+            <div class="container" style="padding-bottom: 20px;" >
                 <div class="row">
-                    <div class="col-lg-12"><h1 class="cd-hire" style="text-align: center;">Accomplishments marked globally</h1><p class="mt-3" style="text-align: center;">states we have worked in</p></div>
-                    <div class="col-lg-10 mx-auto" style="text-align: center;"><img src="assets/img/workindia.gif" style="width: 90%;"></div>
+                    <div class="col-lg-12" data-aos="fade-down"><h1 class="cd-hire" style="text-align: center;">Accomplishments marked globally</h1><p class="mt-3" style="text-align: center;">states we have worked in</p></div>
+                    <div class="col-lg-10 mx-auto" data-aos="fade-down" style="text-align: center;"><img src="assets/img/workindia.gif" style="width: 90%;"></div>
                 </div>
             </div>
         </section>
@@ -146,7 +148,7 @@
         <section class="our-services">
             <div class="container">
                 <div class="row mx-auto" style="text-align: center; padding-bottom: 25px;"><h1> Our core services </h1></div>
-                <div class="row">
+                <div class="row" data-aos="fade-down">
                     
                     <div class="col px-4 mx-auto">
                         <div class="box" style="background-image: linear-gradient(rgb(186, 228, 244) 0%, rgb(186, 228, 244) 100%)">
@@ -173,7 +175,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row pt-3">
+                <div class="row pt-3" data-aos="fade-down">
                     <div class="col px-4">
                         <div class="box" style="background-image: linear-gradient(rgb(244, 220, 204) 0%, rgb(244, 220, 204) 100%);">
                             <h3 class="title">Search Engine Optimization</h3>
@@ -220,9 +222,7 @@
                 }
             })
             })
-            $(function() {
-                $('.nav-tabs').responsiveTabs();
-            });
+            AOS.init();
         </script>
     </body>
 </html>
