added technologies section

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </button>
         </nav>
         
-        <header class="masthead text-center text-white d-flex">
+        <header class="masthead text-center text-white d-flex" style="width: 100%;">
             <div class="container my-auto mx-auto" data-aos="fade-down">
                 <div class="row">
                     <div class="col-lg-10 mx-auto">
@@ -121,6 +121,79 @@
                         doloribus rem et soluta maiores assumenda delectus aliquam!</p></div>
             </div>
         </div>
+
+        <!--technologies start-->
+        <section class="tech-work">
+            <div class="container">
+                <div class="row">
+                    <div class="mt-5 pb-5 col-lg-12"><h1 class="cd-hire" style="text-align: center;">Technologies we work with</h1></div>
+                </div>
+                <div class="container pb-5"> 
+                        <ul class="nav nav-tabs d-flex justify-content-center" id="myTab" role="tablist">
+                            <li class="nav-item " role="presentation">
+                              <a class="nav-link active text-center" id="home-tab" data-bs-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Front End</a>
+                            </li>
+                            <li class="nav-item " role="presentation">
+                              <a class="nav-link" id="profile-tab" data-bs-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Back End</a>
+                            </li>
+                            <li class="nav-item " role="presentation">
+                              <a class="nav-link" id="contact-tab" data-bs-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Mobile</a>
+                            </li>
+                            <li class="nav-item " role="presentation">
+                                <a class="nav-link" id="cms-tab" data-bs-toggle="tab" href="#cms" role="tab" aria-controls="cms" aria-selected="false">CMS</a>
+                              </li>
+                              <li class="nav-item " role="presentation">
+                                <a class="nav-link" id="db-tab" data-bs-toggle="tab" href="#db" role="tab" aria-controls="db" aria-selected="false">Database</a>
+                              </li>
+                          </ul>
+                    <div class="tab-content pt-3" id="myTabContent">
+                        <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                            <div class="row p-5">
+                                <div class="col"><a href="#"><img src="assets/img/react.png" style="width: 50px; height: 50px;"></a></div>
+                                <div class="col"><a href="#"><img src="assets/img/angular.png" style="width: 50px; height: 50px;"></a></div>
+                                <div class="col"><a href="#"><img src="assets/img/html5.png" style="width: 50px; height: 50px;"></a></div>
+                                <div class="col"><a href="#"><img src="assets/img/css.png" style="width: 50px; height: 50px;"></a></div>
+                                <div class="col"><a href="#"><img src="assets/img/js.png" style="width: 50px; height: 50px;"></a></div>
+                            </div>
+                        </div>
+                        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                            <div class="row p-5">
+                                <div class="col"><a href="#"><img src="assets/img/php.png" style="width: 50px; height: 50px;"></a></div>
+                                <div class="col"><a href="#"><img src="assets/img/python.png" style="width: 50px; height: 50px;"></a></div>
+                                <div class="col"><a href="#"><img src="assets/img/java.png" style="width: 50px; height: 50px;"></a></div>
+                                <div class="col"><a href="#"><img src="assets/img/node.png" style="width: 50px; height: 50px;"></a></div>
+                                <div class="col"><a href="#"><img src="assets/img/rails.png" style="width: 50px; height: 50px;"></a></div>
+                            </div>
+                        </div>
+                        <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+                            <div class="row p-5">
+                                <div class="col"><a href="#"><img src="assets/img/ios.png" style="width: 50px; height: 50px;"></a></div>
+                                <div class="col"><a href="#"><img src="assets/img/android.png" style="width: 50px; height: 50px;"></a></div>
+                                <div class="col"><a href="#"><img src="assets/img/react.png" style="width: 50px; height: 50px;"></a></div>
+                                <div class="col"><a href="#"><img src="assets/img/flutter.png" style="width: 50px; height: 50px;"></a></div>
+                            </div>
+                        </div>
+                        <div class="tab-pane fade" id="cms" role="tabpanel" aria-labelledby="cms-tab">
+                            <div class="row p-5">
+                                <div class="col"><a href="#"><img src="assets/img/wordpress.png" style="width: 50px; height: 50px;"></a></div>
+                                <div class="col"><a href="#"><img src="assets/img/magento.png" style="width: 50px; height: 50px;"></a></div>
+                                <div class="col"><a href="#"><img src="assets/img/shopify.png" style="width: 50px; height: 50px;"></a></div>
+                            </div>
+                        </div>
+                        <div class="tab-pane fade" id="db" role="tabpanel" aria-labelledby="db-tab">
+                            <div class="row p-5">
+                                <div class="col"><a href="#"><img src="assets/img/mysql.png" style="width: 60px; height: 60px;"></a></div>
+                                <div class="col"><a href="#"><img src="assets/img/mongodb.png" style="width: 60px; height: 60px;"></a></div>
+                                <div class="col"><a href="#"><img src="assets/img/oracle.png" style="width: 60px; height: 60px;"></a></div>
+                                <div class="col"><a href="#"><img src="assets/img/firebase.png" style="width: 60px; height: 60px;"></a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--technologies end-->
+
         <!--homepage content start-->
         <section class="homepage-next">
             <div class="mt-5 container" data-aos="fade-down">
