--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-        <script src="https://cdn.rawgit.com/InventPartners/bootstrap-responsive-tabs/master/jquery.responsivetabs.js"></script>
+        <!-- <script src="https://cdn.rawgit.com/InventPartners/bootstrap-responsive-tabs/master/jquery.responsivetabs.js"></script> -->
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script src="assets/js/script.js"></script>
         
@@ -30,7 +30,7 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon" onclick="openNav()"></span>
             </button>
-            <a class="navbar-brand mx-auto" href="#">Navbar brand</a>
+            <a class="navbar-brand mx-auto" href="index.html">Navbar brand</a>
             <div id="myNav" class="overlay">
                 <!--button to close navigation overlay-->
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -38,16 +38,16 @@
                 <div class="overlay-content" id="navbarToggler">
                     <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="mob-nav nav-link active" href="#">Home</a>
+                        <a class="mob-nav nav-link active" href="index.html">Home</a>
                     </li>
                     <li class="nav-item mob-menu">
-                        <a class="mob-nav nav-link active" href="#">About Us</a>
+                        <a class="mob-nav nav-link active" href="about.html">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="mob-nav nav-link active" href="#">Contact</a>
+                        <a class="mob-nav nav-link active" href="contact.html">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="mob-nav nav-link active" href="#">Blog</a>
+                        <a class="mob-nav nav-link active" href="blog.html">Blog</a>
                     </li>
                     </ul>
                 </div>
@@ -57,21 +57,21 @@
             <div class="collapse navbar-collapse" data-aos="fade-down">
                 <ul class="navbar-nav d-x-flex justify content-center mx-auto mt-2 mt-lg-0">
                     <li class="nav-item">
-                       <a class="nav-link active" href="#">Home</a>
+                       <a class="nav-link active" href="index.html">Home</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link active" href="#">About Us</a>
+                        <a class="nav-link active" href="about.html">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Contact</a>
+                        <a class="nav-link active" href="contact.html">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Blog</a>
+                        <a class="nav-link active" href="blog.html">Blog</a>
                     </li>
                 </ul>
                 <!--contact us button-->
                 <button class="btn btn-primary text-white d-none d-lg-block rounded-pill" type="button">
-                    <a class="btn btn-primary btn-xl js-scroll-trigger" role="button" href="#services">Contact Us</a>
+                    <a class="btn btn-primary btn-xl js-scroll-trigger" role="button" href="contact.html">Contact Us</a>
                 </button>
                 <!--nightmode icon-->
                 <button class="btn text-right text-white d-none d-lg-block" type="button" style="color: white; margin-left:15px; margin-right: 25px;">
@@ -150,7 +150,7 @@
                     <div class="tab-content pt-3" id="myTabContent">
                         <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
                             <div class="row p-5">
-                                <div class="col"><a href="#"><img src="assets/img/react.png" style="width: 50px; height: 50px; background: white;"></a></div>
+                                <div class="col"><a href="#"><img src="assets/img/react.png" style="width: 50px; height: 50px;"></a></div>
                                 <div class="col"><a href="#"><img src="assets/img/angular.png" style="width: 50px; height: 50px;"></a></div>
                                 <div class="col"><a href="#"><img src="assets/img/html5.png" style="width: 50px; height: 50px;"></a></div>
                                 <div class="col"><a href="#"><img src="assets/img/css.png" style="width: 50px; height: 50px;"></a></div>
@@ -348,16 +348,16 @@
                                 <div class="col-lg-8">
                                     <ul class="footer-links">
                                         <li class="footer-item py-2">
-                                            <a class="footer-link">Home</a>
+                                            <a class="footer-link" href="index.html">Home</a>
                                         </li>
                                         <li class="footer-item py-2">
-                                            <a class="footer-link">About Us</a>
+                                            <a class="footer-link" href="about.html">About Us</a>
                                         </li>
                                         <li class="footer-item py-2">
-                                            <a class="footer-link">Contact</a>
+                                            <a class="footer-link" href="contact.html">Contact</a>
                                         </li>
                                         <li class="footer-item py-2">
-                                            <a class="footer-link">Blog</a>
+                                            <a class="footer-link" href="blog.html">Blog</a>
                                         </li>
                                     </ul>
                                 </div>
