--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </nav>
         
         <header class="masthead text-center text-white d-flex" style="width: 100%;">
-            <div class="container my-auto mx-auto" data-aos="fade-down">
+            <div class="container pb-5 my-auto mx-auto" data-aos="fade-down">
                 <div class="row">
                     <div class="col-lg-10 mx-auto">
                         <h1 class="text-uppercase animate__animated animate__pulse ">Website Development Services</h1>
