added values section

--- a/about.html
+++ b/about.html
@@ -54,8 +54,8 @@
             </div>
 
             <!--normal navbar for large and extra large devices-->
-            <div class="collapse navbar-collapse" data-aos="fade-down">
-                <ul class="navbar-nav d-x-flex justify content-center mx-auto mt-2 mt-lg-0">
+            <div class="collapse navbar-collapse d-x-flex justify-content-end" data-aos="fade-down">
+                <ul class="navbar-nav mt-2 mt-lg-0">
                     <li class="nav-item">
                        <a class="nav-link active" href="index.html">Home</a>
                      </li>
@@ -74,7 +74,7 @@
                     <a class="btn btn-primary btn-xl js-scroll-trigger" role="button" href="contact.html">Contact Us</a>
                 </button>
                 <!--nightmode icon-->
-                <button class="btn text-right text-white d-none d-lg-block" type="button" style="color: white; margin-left:15px; margin-right: 25px;">
+                <button class="btn text-right text-white d-none d-lg-block" type="button" style="margin-right:5px;">
                     <i onclick="myFunction(this)" class="fas fa-moon" style="text-align: center; color:black; font-size: large;"></i>
                 </button>
             </div>
@@ -133,15 +133,41 @@
         <section class="values">
             <div class="container">
                 <div class="row">
-                    <h1 class="text-center pt-5 mb-3 big-hire">Our core values</h1>
+                    <h1 class="text-center pt-5 mb-5 big-hire">Our core values</h1>
                     <div class="col-lg-4">
-
+                        <h3>User centric</h3>
+                        <p>We’re not obsessed about our clients, we’re obsessed about our client’s clients. 
+                            We believe technology should have a learning curve to understand human behavior, 
+                            not the other way around. We employ human centered design to solve real world problems.</p>
                     </div>
                     <div class="col-lg-4">
-
+                        <h3>Transparent</h3>
+                        <p>We partner and function like your in-house team. Transparency
+                            works in our favor because we believe winning our client’s trust
+                            is the most important aspect of building a sustainable business.</p>
                     </div>
                     <div class="col-lg-4">
-                        
+                        <h3>Attention to Detail</h3>
+                        <p>God is in the details. We believe it’s not possible to win 
+                            without getting into the trenches detailing out every single 
+                            thing that would affect the end user experience. We work to delight.</p>
+                    </div>
+                    <div class="col-lg-4">
+                        <h3>Building for the future</h3>
+                        <p>God is in the details. We believe it’s not possible to win 
+                            without getting into the trenches detailing out every single
+                            thing that would affect the end user experience. We work to delight.</p>
+                    </div>
+                    <div class="col-lg-4">
+                        <h3 class="py-3">World class operating standards</h3>
+                        <p>We employ global standard project management tools to ensure absolute transparency is maintained in what we do.</p>
+                    </div>
+                    <div class="col-lg-4">
+                        <h3 class="py-3">Delivering on Time</h3>
+                        <p>
+                            We partner and function like your in-house team. Transparency works in our favor because we believe 
+                            winning our client’s trust is the most important aspect of building a sustainable business.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -248,8 +274,8 @@
         <!--footer starts-->
         <section id="footer">
             <footer>
-                <div class="container" data-aos="fade-down">
-                    <div class="row shadow p-3 mb-5 bg-white rounded">
+                <div class="container">
+                    <div class="row">
                             <p class="cp-text text-center">
                                 © Copyright 2020 UpDot. All rights reserved.
                             </p>
