--- a/contact.html
+++ b/contact.html
@@ -54,8 +54,8 @@
             </div>
 
             <!--normal navbar for large and extra large devices-->
-            <div class="collapse navbar-collapse" data-aos="fade-down">
-                <ul class="navbar-nav d-x-flex justify content-center mx-auto mt-2 mt-lg-0">
+            <div class="collapse navbar-collapse d-x-flex justify-content-end" data-aos="fade-down">
+                <ul class="navbar-nav mt-2 mt-lg-0">
                     <li class="nav-item">
                        <a class="nav-link active" href="index.html">Home</a>
                      </li>
@@ -71,10 +71,10 @@
                 </ul>
                 <!--contact us button-->
                 <button class="btn btn-primary text-white d-none d-lg-block rounded-pill" type="button">
-                    <a class="btn btn-primary btn-xl js-scroll-trigger" role="button" href="contact.html">Contact Us</a>
+                    <a class="btn btn-primary js-scroll-trigger" role="button" href="contact.html">Contact Us</a>
                 </button>
                 <!--nightmode icon-->
-                <button class="btn text-right text-white d-none d-lg-block" type="button" style="color: white; margin-left:15px; margin-right: 25px;">
+                <button class="btn text-right text-white d-none d-lg-block" type="button" style="margin-right: 5px;">
                     <i onclick="myFunction(this)" class="fas fa-moon" style="text-align: center; color:black; font-size: large;"></i>
                 </button>
             </div>
@@ -104,8 +104,8 @@
         <!--footer starts-->
         <section id="footer">
             <footer>
-                <div class="container" data-aos="fade-down">
-                    <div class="row shadow p-3 mb-5 bg-white rounded">
+                <div class="container">
+                    <div class="row">
                             <p class="cp-text text-center">
                                 © Copyright 2020 UpDot. All rights reserved.
                             </p>
