--- a/index.html
+++ b/index.html
@@ -291,25 +291,38 @@
         <!--values start-->
         <section class="values">
             <div class="container my-5 px-5 shadow p-3 mb-5 bg-white rounded-3 start">
-                <div class="d-flex align-items-center">
+                <div class="d-flex align-items-end">
                     <div class="nav flex-column nav-pills mx-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                       <a class="nav-link active mt-5" id="v-pills-home-tab" data-bs-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true"><h1>Discover</h1></a>
                       <a class="nav-link mt-3" id="v-pills-profile-tab" data-bs-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false"><h1>Design</h1></a>
                       <a class="nav-link mt-3" id="v-pills-messages-tab" data-bs-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages" aria-selected="false"><h1>Develop</h1></a>
                       <a class="nav-link mt-3" id="v-pills-settings-tab" data-bs-toggle="pill" href="#v-pills-settings" role="tab" aria-controls="v-pills-settings" aria-selected="false"><h1>Launch</h1></a>
                     </div>
-                    <div class="tab-content shadow p-3 mb-5 bg-white rounded-end" id="v-pills-tabContent">
-                        <div class="tab-pane fade show active ps-3" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
-                            <h2>01</h2>
-                            <h2>CORE VALUES</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                                Unde fugiat ipsa provident dolorem animi ratione.
-                                 Mollitia veritatis eum libero! Sit, consequatur perspiciatis 
-                                 fugit labore tempore autem! Adipisci numquam deleniti optio.</p>
+                    <div class="tab-content" id="v-pills-tabContent">
+                        <div class="tab-pane fade show active ps-3 pb-5" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
+                            <h2 class="pb-1">01</h2>
+                            <h2 class="pb-5">CORE VALUES</h2>
+                            <p class="pb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Unde fugiat ipsa provident dolorem animi ratione.</p>
                         </div>
-                      <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">World</div>
-                      <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">Hi   </div>
-                      <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">Here</div>
+                      <div class="tab-pane fade ps-3 pb-5" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
+                        <h2 class="pb-1">02</h2>
+                        <h2 class="pb-5">CORE VALUES</h2>
+                        <p class="pb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Unde fugiat ipsa provident dolorem animi ratione.</p>
+                      </div>
+                      <div class="tab-pane fade ps-3 pb-5" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">
+                        <h2 class="pb-1">03</h2>
+                        <h2 class="pb-5">CORE VALUES</h2>
+                        <p class="pb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Unde fugiat ipsa provident dolorem animi ratione.</p>
+                      </div>
+                      <div class="tab-pane fade ps-3 pb-5" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">
+                        <h2 class="pb-1">04</h2>
+                        <h2 class="pb-5">CORE VALUES</h2>
+                        <p class="pb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Unde fugiat ipsa provident dolorem animi ratione.</p>
+                      </div>
                     </div>
                 </div>
             </div>
